# Cue-Auto

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  ROADMAP_DETAILED.md  SOUL.md  docker-compose.webhook.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
deploy/: Caddyfile.webhook
docs/: architecture.md  deployment.md  observability.md  security.md  skills-sdk.md
scripts/: generate-self-signed-cert.sh
skills/: example_hello.py  risk_rules.json
skills/examples/: README.md  incident_timeline.py  release_readiness.py  research_brief.py
skills/registry/: index.json
src/cue_agent/: __init__.py  __main__.py  app.py  config.py  config_diagnostics.py  logging_utils.py  (+1 more)
tests/: conftest.py  test_action_registry.py  test_app.py  test_approval_flow_integration.py  test_approval_gate.py  test_audit_export.py  test_audit_trail.py  test_builtin_tools.py  test_config.py  test_config_diagnostics.py  test_health_server.py  test_heartbeat.py  test_llm_router.py  test_logging_utils.py  test_loop.py  test_main.py  test_multi_agent_orchestrator.py  test_normalizer.py  test_notification_manager.py  test_risk_classifier.py  test_session_memory.py  test_skill_loader.py  test_skill_marketplace.py  test_skill_scaffold.py  test_skill_testing.py  test_skill_watcher.py  test_soul_loader.py  test_task_queue.py  test_telegram_gateway.py  test_user_access.py  test_vector_memory.py  test_verifier_prompt_safety.py  test_workflow_watcher.py  test_workflows.py
(+59 files in other folders)
